--- a/webapp/test/unit/unitTests.qunit.html
+++ b/webapp/test/unit/unitTests.qunit.html
@@ -7,7 +7,8 @@
 	<script id="sap-ui-bootstrap"
 			src="https://sapui5.hana.ondemand.com/resources/sap-ui-core.js"
 			data-sap-ui-resourceroots='{
-				"sap.ui.demo.bulletinboard": "../../"
+				"sap.ui.demo.bulletinboard": "../../",
+				"test.unit": "./"
 			}'
 			data-sap-ui-frameOptions='deny'
 			data-sap-ui-async="true">
